# copilot-money-mcp

./: .coveragerc  .eslintrc.json  .gitignore  .mcpbignore  .prettierignore  APPROVAL_PROMPTS_FIX.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  PHASE11_PR_DESCRIPTION.md  PLAN.md  PRIVACY.md  README.md  REVERSE_ENGINEERING_FINDING.md  SECURITY.md  SESSION_RECAP.md  SIGNING-TEST-DELETEME.md  TASKS_14_15_COMPLETE.md  TEST_SUMMARY.md  codecov.yml  eslint.config.js  explore-goal-history.js  manifest.json  package-lock.json  package.json  pyproject.toml  pytest.ini  server.json  transactions.csv  tsconfig.json  tsconfig.scripts.json  tsconfig.tests.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY_SETUP.md  dependabot.yml
.github/workflows/: audit-reviews.yml  auto-merge.yml  auto-release.yml  build-mcpb.yml  claude-review.yml  coverage.yml  npm-publish.yml  required-sections.yml  test.yml
docs/: CONFORMANCE_ARCHITECTURE.md  DATA_QUALITY_GUIDE.md  DESIGN_NOTES.md  EXAMPLE_QUERIES.md  MCPB_COMPLIANCE.md  README.md  REVIEW_AUDIT_PLAN.md  TESTING_GUIDE.md  firestore-collections.md  graphql-live-reads.md  index.html  scheduled-smoke.md  tools-by-mode.md
docs/audits/: 2026-06-10-boundary-audit.md
docs/graphql-capture/: hidden-mutations.md  introspection-recon.md  test-agents.md  wire-protocol.md
docs/reference/: firestore-write-schema.md
scripts/: audit-pr-reviews.ts  build-write-manifest.ts  check-pr-sections.sh  check-server-json.ts  check-skills.py  check-version-sync.ts  copy_demo_database.py  decode-coverage.ts  generate-graphql-operations.ts  generate-test-db.ts  install-scheduled-smoke.sh  launcher.sh  manifest-utils.ts  pack-mcpb.ts  profile-database.ts  scheduled-smoke.ts  smoke-graphql.ts  sync-manifest.ts  uninstall-scheduled-smoke.sh  verify-optimistic-consistency.ts
scripts/graphql-capture/: README.md  adapt-apollo-log.ts  crawl-prompt.md  generate-docs.ts  interceptor.js  merge-documents.ts  scrub.ts
scripts/smoke/: _conformance.ts  _field-conformance.ts  _harness.ts  budgets.ts  categories.ts  color-name-conformance.ts  conformance-checks.ts  conformance.ts  field-conformance-checks.ts  read-checks.ts  reads.ts  recurring-frequency-conformance.ts  recurring-state-conformance.ts  recurring.ts  roundtrip-checks.ts  roundtrip.ts  run-standalone.ts  tags.ts  time-frame-conformance.ts  transaction-type-conformance.ts
skills/: user-profile.md  user-profile.template.md
skills/_lib/: free_money.py
skills/amazon-sync/: SKILL.md
skills/boundary-audit/: SKILL.md
skills/finance/: SKILL.md
skills/finance-cleanup/: SKILL.md
skills/finance-pulse/: SKILL.md
skills/finance-trip/: SKILL.md
src/: cli.ts  server.ts
src/conformance/: ledger.ts
src/copilot_money_mcp/: __main__.py  server.py
src/core/: database.ts  decoder.ts  firestore-client.ts  index.ts  leveldb-reader.ts  live-database.ts  (+2 more)
tests/: conftest.py
(+341 files in other folders)
