[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-money-mcp"
version = "0.1.0"
description = "MCP server for Copilot Money - AI-powered personal finance queries using local data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ignacio Hermosilla", email = "ignacio@example.com" }
]
keywords = ["mcp", "copilot-money", "personal-finance", "leveldb", "firestore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.8",
]

[project.scripts]
copilot-money-mcp = "copilot_money_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/ignaciohermosillacornejo/copilot-money-mcp"
Repository = "https://github.com/ignaciohermosillacornejo/copilot-money-mcp"
Issues = "https://github.com/ignaciohermosillacornejo/copilot-money-mcp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/copilot_money_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/copilot_money_mcp"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 100.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
